<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup_Make"
    android:background="@drawable/bg_dialog_radius">

    <!-- 취소, 적용 -->

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp">

        <TextView
            android:id="@+id/txt_cancel_basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="19dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_set_title"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="21dp"
            android:textColor="#524C5E"/>



        <TextView
            android:id="@+id/txt_apply_basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="19dp" />

    </RelativeLayout>



    <!-- 커스텀뷰 부분 1 -->

    <ListView
        android:id="@+id/Checkbox_List"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:divider="#00000000"
        />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">


        <ImageButton
            android:id="@+id/Search"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_search_map"
            android:background="#00000000"
            android:onClick="onSearchClicked" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Search"
            android:text="@string/search"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textSize="19sp"
            android:onClick="onSearchClicked" />

        <TextView
            android:id="@+id/Add_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="19dp"
            android:textColor="@color/purple"
            android:onClick="onAddTextClicked"/>


    </RelativeLayout>

</LinearLayout>